# j.a.r.v.i.s

./: .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md
architecture/: global.excalidraw
argocd/: istio-app.yaml  jaar-app-local.yaml  (+6 more)
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 00f312b05b23_add_task_note_table.py  3f33f977ca96_add_key_focus_task_key_focus_and_.py  a1b2c3d4e5f6_add_skills_json_column_to_worker.py  b083d6039eaa_replace_jira_ticket_id_with_source_type_.py  d8ae591b34ad_initial_tables.py  e4666bd8e9fd_add_worker_repository_tables.py
backend/app/: config.py  main.py
backend/app/db/: engine.py
backend/app/models/: __init__.py  blocker.py  daily.py  daily_task.py  enums.py  key_focus.py  repository.py  task.py  task_key_focus.py  task_note.py  weekly.py  worker.py  worker_repository.py
backend/app/routes/: blockers.py  dailies.py  daily_tasks.py  gcal.py  jira.py  key_focuses.py  repositories.py  skills.py  task_blockers.py  task_key_focuses.py  task_notes.py  tasks.py  weeklies.py  workers.py
backend/app/schemas/: blocker.py  daily.py  daily_task.py  key_focus.py  repository.py  task.py  task_key_focus.py  task_note.py  weekly.py  worker.py
backend/app/services/: gcal_client.py  jira_client.py  k8s.py
backend/tests/: conftest.py  test_api.py  test_blockers.py  test_gcal.py  test_gcal_integration.py  test_jira.py  test_jira_integration.py  test_k8s_service.py  test_key_focuses.py  test_models.py  test_repositories.py  test_task_notes.py  test_worker_models.py  test_workers.py
(+250 files in other folders)
