[project]
name = "jarvis-backend"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "pydantic==2.12.5",
    "pydantic-settings>=2.0.0",
    "alembic>=1.13.0",
    "jira>=3.10.5",
    "google-auth>=2.49.1",
    "google-auth-oauthlib>=1.3.1",
    "google-api-python-client>=2.193.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
